--- a/contribute/translate-glossary.html
+++ b/contribute/translate-glossary.html
@@ -8,8 +8,8 @@ authors:
 
 <h2> What's new in the glossary</h2>
 <p>In the old version of the handbook, the glossary was one page with all of the term in it. In the new version, we gave each glossary a webpage for better referencing and linking.<\p>
-Glossaries that were translated in the old version of the handbook have been transfered to the new site. Please checkCheck if your language has an old version of the glossary -
-. You can find them <a href=https://github.com https://github.com/{{ site.github_username }}/tree/gh-pages/glossary> here </a>
+
+<p></p>Glossaries that were translated in the old version of the handbook have been transfered to the new site. Please check if your language has an old version of the glossary. You can find them <a href="https://github.com/okfn/opendatahandbook/tree/gh-pages/glossary"> here </a>.
 
 <h3><b>If you do have an old version translated, follow the these steps:</b></h3>
 <p> The old glossary format does not allow linking from the new version of the guide, and you will need to transfer the term to the new format.</p>
@@ -19,7 +19,7 @@ Glossaries that were translated in the old version of the handbook have been tra
 <p>Under your language folder, Follow the breadcrumb trail <code>{{ site.github_repo }} / glossary / es /</code>, to the right of which is a plus symbol <code><strong>+</strong></code>. create a folder for each term by pressing on the '+' sign and type the term name in English. The folder names should be in lower-case letters with dashes ‘-’ instead of white spaces. Add a ‘/’ in the end of the name to create a new folder.</p>
 
 <h3> 2. Translate the term</h3>
-<p> open a new index.md file by clicking on the '+'. </p>
+<p> Open a new index.md file by clicking on the '+'. </p>
 
 In the text editor below add the front matter:
 <pre>
